    - Fixed rubidium's ratios being fucked in comparison to the amount needed in science.
    - FINALLY MADE ACID PLANTS LOOK DIFFERENT OH MY GOD
    - Fixed the vanadium modular battery technologies not having the correct color.
    - Fixed the vanadium modular batterie MK2's recipe.
    - Moved calcium chloride into the calcium subgroup.

---------------------------------------------------------------------------------------------------
Version: 0.5.133
  The why couldnt assembling machines just have more fluid slots Update:

  Changes:
    - Changed lead and gallium ratios to be cheaper and smaller-scale in comparison to the amount needed for science.
    - Made the Reactive-Non Metal pack more expensive.

  Fixes:
    - Fixed plastic Reactive-Non Metal pack recipe using nitrogen instead of chlorine.

---------------------------------------------------------------------------------------------------
Version: 0.5.132
  The that one spock quote, yknow the one Update:

  Fixes:
    - Reverted partial K2 compatibility to fix you insane people playing giant modpacks with PM

---------------------------------------------------------------------------------------------------
Version: 0.5.131
  The im hasamentally insane Update:

  Changes:
    - Halved the amount of gallium needed for Post-transition metal packs.

---------------------------------------------------------------------------------------------------
Version: 0.5.130
  The i wonder if i'll use the next 870 version numbers Update:

  Fixes:
    - Fixed ANOTHER error with K2 after deleting alternative recipe packs.

---------------------------------------------------------------------------------------------------
Version: 0.5.129
Date: 2024-08-16
  The dont code when your tired, heed my warning Update:

  Fixes:
    - Fixed an error with K2 after deleting alternative recipe packs.

---------------------------------------------------------------------------------------------------
Version: 0.5.127